--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="banner">
     <div class="banner-content">
       <div class="logo">
-        <img src="./assets/imagens/logo.png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
+        <img src="./assets/images/logo.png" title="Logotipo Trilha de CSS DIO" alt="Logotipo Trilha de CSS DIO">
       </div>
       <h1>Trilha de CSS da DIO</h1>
       <p>A nova Trilha de CSS da DIO está disponível. Acesse já e aprenda do zero como desenvolver sites profissionais.
@@ -45,7 +45,7 @@
     </section>
     <section id="professional-challenges">
       <h2>Evolua e encare novos desafios profissionais</h2>
-      <img src="./assets/imagens/professional-challenges.png" title="Homem lendo depoimentos em um tablet"
+      <img src="./assets/images/professional-challenges.png" title="Homem lendo depoimentos em um tablet"
         alt="Homem lendo depoimentos em um tablet">
       <p>
         Junte-se ao nosso ecossistema e transforme o mundo com a gente! Todos os dias dezenas de empresas
@@ -56,7 +56,7 @@
     </section>
   </main>
   <footer>
-    <img class="dio-logo" src="./assets/imagens/dio-logo.png" title="Logotipo DIO com o texto make the change"
+    <img class="dio-logo" src="./assets/images/dio-logo.png" title="Logotipo DIO com o texto make the change"
       alt="Logotipo DIO com o texto make the change">
     <p>Acesse <a href="https://dio.me">dio.me</a> e se cadastre agora</p>
   </footer>
